# be/api/handler/user_handler.go
@@ -404,8 +404,8 @@ func (h *UserHandler) GetAllUser(c *gin.Context) {
 // @Tags         Users
 // @Accept       json
 // @Produce      json
-// @Param image formData string true "firstName"
-// @Param image formData string true "lastName"
+// @Param firstName formData string true "firstName"
+// @Param lastName formData string true "lastName"
 // @Param image formData file true "Image to upload"
 // @param Authorization header string true "Authorization"
 // @Router       /api/user/information [PATCH]
