# be/cmd/server/docs/swagger.yaml
@@ -495,6 +495,9 @@ paths:
         name: categoryId
         type: string
       - in: query
+        name: companyId
+        type: integer
+      - in: query
         name: cost
         type: string
       - in: query
@@ -660,6 +663,9 @@ paths:
       - in: query
         name: assetName
         type: string
+      - in: query
+        name: companyId
+        type: integer
       - in: query
         name: emailAssign
         type: string
@@ -1314,6 +1320,9 @@ paths:
       description: Get all request transfer have permission
       parameters:
       - in: query
+        name: companyId
+        type: integer
+      - in: query
         name: depId
         type: integer
       - in: query
@@ -1541,12 +1550,12 @@ paths:
       parameters:
       - description: firstName
         in: formData
-        name: image
+        name: firstName
         required: true
         type: string
       - description: lastName
         in: formData
-        name: image
+        name: lastName
         required: true
         type: string
       - description: Image to upload
